src/styles.scss
@import 'assets/styles/global';

#root {
  overflow: overlay;
  overflow-x: hidden;
  &> div,
  .auth-container,
  .app-container {
    height: 100%;
  }
}

.app-container {
  display: flex;
  flex-direction: column;

  .sdp-container {
    flex: 1
  }
}

.w-fit-content {
  width: fit-content;
}

